<resources>
    <string name="app_name">Hackathon</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_destination_detail">Destination Detail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="logout">Logout</string>
    <string name="top_destinations">Top Destinations</string>
    <string name="news_feed">News Feed</string>
    <string name="explore_the_north_east">Explore The North East</string>
    <string name="reviews">Reviews</string>
    <string name="nearby_facilities">Nearby Facilities</string>
    <string name="about_and_help">About and Help</string>
    <string name="contact_us">Contact Us</string>
    <string name="other">Other</string>
    <string name="search">Search</string>
    <string-array name="states" formatted="false">
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Sikkim</item>
        <item>Tripura</item>
    </string-array>
    <string name="arunachal_pradesh">Arunachal Pradesh</string>
    <string name="assam">Assam</string>
    <string name="manipur">Manipur</string>
    <string name="meghalaya">Meghalaya</string>
    <string name="mizoram">Mizoram</string>
    <string name="nagaland">Nagaland</string>
    <string name="sikkim">Sikkim</string>
    <string name="tripura">Tripura</string>
    <string-array name="topdestination_location" formatted="false">
        <item>26.5775,93.1711</item>
        <item>27.5867,91.8577</item>
        <item>27.3869,88.8311</item>
        <item>27.8000000,95.5000000</item>
        <item>27.7949,92.3876</item>
        <item>27.5895,91.9833</item>
        <item>25.2717,91.7308</item>
        <item>25.5021,92.3419</item>
        <item>27.7221,91.8254</item>
        <item>27.416786,88.582944</item>
        <item>27.3066,88.3640</item>
        <item>23.3242,92.1312</item>
        <item>26.570,94.100</item>
        <item>24.7980,93.9482</item>
        <item>25.5956,94.7931</item>
        <item>27.5035,92.1044</item>
        <item>25.241711,91.679032</item>
        <item>25.2443,91.7384</item>
        <item>26.20073,91.74683</item>
        <item></item>
        <item></item>
        <item>25.6704,94.1095</item>
        <item>25.8455682,94.1769749</item>
        <item>27.3198,88.2400</item>
    </string-array>
    <string-array name="topdestination_places" formatted="false">
        <item>Kaziranga National Park</item>
        <item>Tawang Monastry</item>
        <item>Nathu La Pass</item>
        <item>River Rafting in Siang</item>
        <item>Gorichen Peak</item>
        <item>Nuranang Falls</item>
        <item>Cherrapunji</item>
        <item>Jaintia Hills</item>
        <item>Madhuri Lake</item>
        <item>Phodong Monastery</item>
        <item>Ravangla</item>
        <item>Dampa Tiger Reserve</item>
        <item>Majuli Island</item>
        <item>Shri Govindajee Temple</item>
        <item>Shilloi Lake</item>
        <item>Sela Pass</item>
        <item>Root Bridge, Cherrapunji</item>
        <item>Mawsmai Cave</item>
        <item>Brahmaputra River</item>
        <item>Gatoonga Tea Estate</item>
        <item>Yak Ride</item>
        <item>Japfu Peak and Dzukou Valley</item>
        <item>Touphema Village</item>
        <item>Pelling</item>
    </string-array>
    <string-array name="topdestination_states" formatted="false">
        <item>Assam</item>
        <item>Arunachal Pradesh</item>
        <item>Sikkim</item>
        <item>Arunachal Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Meghalaya</item>
        <item>Meghalaya</item>
        <item>Arunachal Pradesh</item>
        <item>Sikkim</item>
        <item>Sikkim</item>
        <item>Mizoram</item>
        <item>Assam</item>
        <item>Manipur</item>
        <item>Nagaland</item>
        <item>Arunachal Pradesh</item>
        <item>Meghalaya</item>
        <item>Meghalaya</item>
        <item>Assam, Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Sikkim</item>
        <item>Nagaland</item>
        <item>Nagaland</item>
        <item>Sikkim</item>
    </string-array>
    <string-array name="topdestination_images" formatted="false">
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/f/f6/Indian_rhinoceros%2Ckaziranga_national_park.jpg/1280px-Indian_rhinoceros%2Ckaziranga_national_park.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Tawang_Monastery_at_April.jpg/1280px-Tawang_Monastery_at_April.jpg</item>
        <item>http://d27k8xmh3cuzik.cloudfront.net/wp-content/uploads/2015/01/Nathu-La-pass.jpg</item>
        <item>http://maxpixel.freegreatpicture.com/static/photo/1x/River-Rafting-Water-Raft-Whitewater-Boat-Sport-444743.jpg</item>
        <item>http://bhaaratdarshan.com/ar/wp-content/uploads/2016/05/main-Gorichen-Peak-bhaaratdarshan-1.jpg</item>
        <item>https://en.wikipedia.org/wiki/Nuranang_Falls#/media/File:Nuranang.JPG</item>
        <item>https://en.wikipedia.org/wiki/File:Nohkalikai_falls.jpg</item>
        <item>http://d27k8xmh3cuzik.cloudfront.net/wp-content/uploads/2015/01/Jaintia-Hills1.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/a/a5/Madhuri_Lake.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/a/af/Phodong_monastery_-_north_sikkim.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/7/70/The_Buddha_Park_or_Tathagata_Sthal%2C_Sikkim.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/2/2a/2010-kabini-tiger.jpg</item>
        <item>http://d27k8xmh3cuzik.cloudfront.net/wp-content/uploads/2015/01/Majuli-Islands1.jpg</item>
        <item>http://sevendiary.com/wp-content/uploads/2015/07/Shri-Govindajee-Temple_Imphal.jpg</item>
        <item>http://d27k8xmh3cuzik.cloudfront.net/wp-content/uploads/2015/01/Shilloi-Lake1.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/1/11/2007-sela-pass-1.jpg</item>
        <item>https://www.holidify.com/blog/wp-content/uploads/2014/10/5512100471_3fdacfdbb1_z.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/e/e7/Mawsmai_Cave_in_Meghalaya%2C_India.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/8/88/Brahmaputra_River_Shigatse.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/9/98/Mount-dempo-tea-plantation.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/f/f5/Yak_animal_in_Sikkim_India.JPG</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/The_Dzukou_Valley.JPG/800px-The_Dzukou_Valley.JPG</item>
        <item>https://www.holidify.com/blog/wp-content/uploads/2014/10/2091431903_9a291d6735_z.jpg</item>
        <item>https://tmi2-tourmyindiapvtlt.netdna-ssl.com/blog/wp-content/uploads/2015/01/pelling-kanchendzonga.jpg</item>
        };
    </string-array>
</resources>